--- a/Cliente/css/style.css
+++ b/Cliente/css/style.css
@@ -1,18 +1,29 @@
+* {
+
+margin: 0px;
+padding: 0px;
+box-sizing: border-box;
+}
+
 body {
 
-background-color:	rgb(217, 217, 217);
-margin:0px;
+background-color:rgb(217, 217, 217);
 
 }
 
-p {
 
-margin:0px;
+body {
+
+height: 100%;
+display:flex;
+justify-content: space-around;
+align-items: center;
+flex-direction: column;
+font-family: sans-serif;
 
 }
 
 a {
-margin:0px;
 color:white;
 text-decoration: none;
 
@@ -21,17 +32,14 @@ text-decoration: none;
 header {
 
 background-color: rgb(23, 127, 135);
-margin:0px;
 min-height: 30px;
 max-height: 40px;
-max-width: 100%;
+width: 100%;
 }
 
 header p{
 
 color:white;
-padding-top:0px;
-padding-bottom: 0px; 
 
 }
 
@@ -85,9 +93,8 @@ text-decoration: underline;
 background-color: white;
 margin:auto;
 height: 105px;
-max-width: 100%;
-vertical-align: middle
-
+width: 100%;
+vertical-align: middle;
 }
 
 .header-2 ul li {
@@ -126,4 +133,132 @@ margin:0px;
 
 	max-height: 300px;
 
+}
+
+.conteudo-login {
+
+	background-color: rgb(23, 127, 135);
+	width: 100%;
+	padding-bottom: 35px;
+
+}
+
+.form {
+
+width: 30%;
+position: relative;
+height: 50px;
+overflow: hidden;
+margin-bottom: 5px;
+}
+
+.form input{
+
+width: 100%;
+height: 100%;
+color: #595f6e;
+padding-top: 20px;
+padding-bottom: 20px;
+outline: none;
+}
+
+.form label{
+
+position:absolute;
+bottom:0px;
+left:0%;
+width: 100%;
+height: 100%;
+pointer-events: none;
+}
+
+.form label::after{
+content: "";
+position:absolute;
+left:0px;
+bottom:-1px;
+height: 100%;
+width: 100%;
+border-bottom: 5px solid rgb(150, 150, 150); 
+transform: translateX(-100%);
+transition: transform 0.6s ease;
+}
+
+.content-name {
+position:absolute;
+bottom:5px;
+left: 0px;
+transition: all 0.3s ease;
+
+}
+
+.form input:focus + .label-name .content-name, 
+.form input:valid + .label-name .content-name{
+transform: translateY(-150%);
+font-size: 14px;
+color:rgb(23, 127, 135);
+}
+
+.form input:focus + .label-name::after,
+.form input:valid + .label-name::after{
+transform:translateX(0%);
+
+
+
+}
+
+.form2 input:focus + .label-name .content-name, 
+.form2 input:valid + .label-name .content-name{
+transform: translateY(-150%);
+font-size: 14px;
+color:rgb(23, 127, 135);
+}
+
+.form2 input:focus + .label-name::after,
+.form2 input:valid + .label-name::after{
+transform:translateX(0%);
+
+
+
+}
+
+.form2 {
+
+width: 30%;
+position: relative;
+height: 50px;
+overflow: hidden;
+
+}
+
+.form2 input{
+
+width: 100%;
+height: 100%;
+color: #595f6e;
+padding-top: 20px;
+border:none;
+outline: none;
+}
+
+.form2 label{
+
+position:absolute;
+bottom:0px;
+left:0%;
+width: 100%;
+height: 100%;
+pointer-events: none;	
+}
+
+.form2 label::after{
+content: "";
+position:absolute;
+left:0px;
+bottom:-1px;
+height: 100%;
+width: 100%;
+border-bottom: 5px solid rgb(150, 150, 150); 
+transform: translateX(-100%);
+transition: transform 0.6s ease;
 }
