--- a/Cliente/css/style.css
+++ b/Cliente/css/style.css
@@ -20,6 +20,7 @@ justify-content: space-around;
 align-items: center;
 flex-direction: column;
 font-family: sans-serif;
+}
 
 }
 
@@ -135,6 +136,25 @@ margin:0px;
 
 }
 
+.img-2 {
+
+margin:0px;
+
+}
+
+.img-2 img {
+
+	max-height: 300px;
+
+}
+
+.final {
+
+background-color: red;
+
+}
+
+
 .conteudo-login {
 
 	background-color: rgb(23, 127, 135);
@@ -185,6 +205,7 @@ transition: transform 0.6s ease;
 }
 
 .content-name {
+
 position:absolute;
 bottom:5px;
 left: 0px;
@@ -215,7 +236,6 @@ color:rgb(23, 127, 135);
 .form2 input:focus + .label-name::after,
 .form2 input:valid + .label-name::after{
 transform:translateX(0%);
-
 
 
 }
@@ -260,3 +280,5 @@ border-bottom: 5px solid rgb(150, 150, 150);
 transform: translateX(-100%);
 transition: transform 0.6s ease;
 }
+
+
