--- a/Cliente/css/style.css
+++ b/Cliente/css/style.css
@@ -20,20 +20,20 @@ justify-content: space-around;
 align-items: center;
 flex-direction: column;
 font-family: sans-serif;
+}
 
 }
 
 a {
 color:white;
 text-decoration: none;
-
 }
+
 
 header {
 
 background-color: rgb(23, 127, 135);
-min-height: 30px;
-max-height: 40px;
+height: 100%;
 width: 100%;
 }
 
@@ -77,8 +77,14 @@ min-height: 200px;
 .info img {
 
 margin-left:20px;
-max-height: 18px;
+height: 18px;
 margin-top: 5px;
+
+}
+
+.info {
+
+position:fixed;
 
 }
 
@@ -135,6 +141,19 @@ margin:0px;
 
 }
 
+.img-2 {
+
+margin:0px;
+
+}
+
+.img-2 img {
+
+	max-height: 300px;
+
+}
+
+
 .conteudo-login {
 
 	background-color: rgb(23, 127, 135);
@@ -185,6 +204,7 @@ transition: transform 0.6s ease;
 }
 
 .content-name {
+
 position:absolute;
 bottom:5px;
 left: 0px;
@@ -203,8 +223,6 @@ color:rgb(23, 127, 135);
 .form input:valid + .label-name::after{
 transform:translateX(0%);
 
-
-
 }
 
 .form2 input:focus + .label-name .content-name, 
@@ -217,7 +235,6 @@ color:rgb(23, 127, 135);
 .form2 input:focus + .label-name::after,
 .form2 input:valid + .label-name::after{
 transform:translateX(0%);
-
 
 
 }
@@ -261,4 +278,17 @@ width: 100%;
 border-bottom: 5px solid rgb(150, 150, 150); 
 transform: translateX(-100%);
 transition: transform 0.6s ease;
+}
+
+.img-3 {
+
+background-color: red;
+
+}
+
+.lista-imoveis{
+
+
+background-color: orange;
+
 }
