--- a/Administracao/css/style.css
+++ b/Administracao/css/style.css
@@ -4,7 +4,7 @@ margin:0px;
 padding:0px;
 
 }
-body {
+.doindex {
 
 background-image: url("../imagens/casanoite.jpg");
 background-position:-10px 0px;
