--- a/Cliente/css/style.css
+++ b/Cliente/css/style.css
@@ -20,8 +20,12 @@ justify-content: space-around;
 align-items: center;
 flex-direction: column;
 font-family: sans-serif;
+
 }
 
+h1{
+color: rgb(23,127,135);
+margin-bottom: 20px;
 }
 
 a {
@@ -126,25 +130,27 @@ margin-top: 5px;
 
 .img-1 {
 
-margin:0px;
+margin-bottom: 5px;
+height: 300px;
 
 }
 
 .img-1 img {
 
-	max-height: 300px;
+	height: 300px;
 
 }
 
 .img-2 {
 
-margin:0px;
+margin-bottom: 20px;
+height: 300px;
 
 }
 
 .img-2 img {
 
-	max-height: 300px;
+	height: 100%;
 
 }
 
@@ -279,4 +285,71 @@ width: 100%;
 border-bottom: 5px solid rgb(150, 150, 150); 
 transform: translateX(-100%);
 transition: transform 0.6s ease;
+}
+
+.slidershow{
+  width: 700px;
+  height: 400px;
+  overflow: hidden;
+  margin-top:200px;
+  margin-left:auto;
+  border:2px solid rgb(23, 127, 135);
+
+}
+.middle{
+  transform: translate(-50%,-50%);
+}
+.navigation{
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+.bar{
+  width: 50px;
+  height: 10px;
+  border: 2px solid #fff;
+  margin: 6px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+.bar:hover{
+  background: #fff;
+}
+
+input[name="r"]{
+    position: absolute;
+    visibility: hidden;
+}
+
+.slides{
+  width: 500%;
+  height: 100%;
+  display: flex;
+}
+
+.slide{
+  width: 20%;
+  transition: 0.6s;
+}
+.slide img{
+  width: 100%;
+  height: 100%;
+}
+
+#r1:checked ~ .s1{
+  margin-left: 0;
+}
+#r2:checked ~ .s1{
+  margin-left: -20%;
+}
+#r3:checked ~ .s1{
+  margin-left: -40%;
+}
+#r4:checked ~ .s1{
+  margin-left: -60%;
+}
+#r5:checked ~ .s1{
+  margin-left: -80%;
 }
